# bset

./: README.md  pyproject.toml  subset.py
bset/: __init__.py  dtypes.py  main.py  typedset_chaining.py  typedset_linear_probe.py  typedset_quad_probe.py
perf/: ramtest.py
smolset/: __init__.py  constants.py  smolset.py  subset.py  subset2d.py
test/: test_basic_operations.py
